--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Geison</a>
+                <a href="https://api.whatsapp.com/send/?phone=923194497&text&type=phone_number&app_absent=0">Geison</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -21,6 +21,21 @@
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
+                    <li class="libros">
+                        <a href="#inicio" onclick="seleccionar()">LIBROS</a>
+                        <ul class="sub-menu">
+                            <li><a href="Docs/INFORME_LIBRO.pdf" target="_blank">Administracion y herramientas </a></li> <!-- Redirige a un archivo PDF -->
+                            <li><a href="Docs/Introduccion.pdf"target="_blank" >Introduccion al sql</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/MÓDULO 4.pdf" target="_blank">Tablas indices y vistas</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/Modulo 5.pdf" target="_blank">Comandos avanzados</a></li> <!-- Redirige a una nueva página -->                            <li><a href="Docs/Introduccion.pdf" target="_blank">Administracion y herramientas </a></li> <!-- Redirige a un archivo PDF -->
+                            <li><a href="Docs/Modulo 6.pdf"target="_blank" >Control de transacciones</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/Modulo 7.pdf" target="_blank">Seguridad</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/Modulo 8.pdf" target="_blank">Agente de SQL</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/Modulo 9.pdf" target="_blank">Copia de seguridad</a></li> <!-- Redirige a una nueva página -->
+                            <li><a href="Docs/Modulo 10.pdf" target="_blank">Mantenimiento de BD</a></li> <!-- Redirige a una nueva página -->
+ 
+                        </ul>
+                    </li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -210,5 +225,7 @@
         </a>
     </footer>
     <script src="script.js"></script>
+
+      
 </body>
 </html>
