--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
+                    <li><a href="Docs/ExamenFinal.pdf" onclick="seleccionar()">EXAMEN FINAL</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
+                    
                     <li class="libros">
                         <a href="#inicio" onclick="seleccionar()">LIBROS</a>
                         <ul class="sub-menu">
