--- a/index.html
+++ b/index.html
@@ -165,15 +165,17 @@
                     <p>Fotografía de proyecto</p>
                 </div>
             </div>
+
             <div class="proyecto">
-                <a href=""> <!-- Cambia el enlace al índice correspondiente -->
-                    <img src="Imagenes/MaqVir2.jpg" alt="Diseño Creativo">
+                <a href="SisOperativo/so.html"> <!-- enlace al índice correspondiente -->
+                    <img src="Imagenes/Arqui1.jpg" alt="Máquinas Virtuales">
                     <div class="overlay">
-                        <h3>Maquinas Virtuales</h3>
-                        <p>Fotografía</p>
+                        <h3> Arquitectura de software </h3>
+                        <p>Portafolio</p>
                     </div>
                 </a>
             </div>
+
             
 
         </div>
