--- a/index.html
+++ b/index.html
@@ -20,24 +20,7 @@
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
-                    <li><a href="Docs/ExamenFinal.pdf" onclick="seleccionar()">EXAMEN FINAL</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
-                    
-                    <li class="libros">
-                        <a href="#inicio" onclick="seleccionar()">LIBROS</a>
-                        <ul class="sub-menu">
-                            <li><a href="Docs/INFORME_LIBRO.pdf" target="_blank">Administracion y herramientas </a></li> <!-- Redirige a un archivo PDF -->
-                            <li><a href="Docs/Introduccion.pdf"target="_blank" >Introduccion al sql</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/MÓDULO 4.pdf" target="_blank">Tablas indices y vistas</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/Modulo 5.pdf" target="_blank">Comandos avanzados</a></li> <!-- Redirige a una nueva página -->                            <li><a href="Docs/Introduccion.pdf" target="_blank">Administracion y herramientas </a></li> <!-- Redirige a un archivo PDF -->
-                            <li><a href="Docs/Modulo 6.pdf"target="_blank" >Control de transacciones</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/Modulo 7.pdf" target="_blank">Seguridad</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/Modulo 8.pdf" target="_blank">Agente de SQL</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/Modulo 9.pdf" target="_blank">Copia de seguridad</a></li> <!-- Redirige a una nueva página -->
-                            <li><a href="Docs/Modulo 10.pdf" target="_blank">Mantenimiento de BD</a></li> <!-- Redirige a una nueva página -->
- 
-                        </ul>
-                    </li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -167,7 +150,7 @@
             </div>
 
             <div class="proyecto">
-                <a href="SisOperativo/so.html"> <!-- enlace al índice correspondiente -->
+                <a href="ArquiSoftware/index.html"> <!-- enlace al índice correspondiente -->
                     <img src="Imagenes/Arqui1.jpg" alt="Máquinas Virtuales">
                     <div class="overlay">
                         <h3> Arquitectura de software </h3>
@@ -175,9 +158,6 @@
                     </div>
                 </a>
             </div>
-
-            
-
         </div>
     </div>
 </section>
