--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
 
             <div class="proyecto">
-                <a href="ArquiSoftware/index.html"> <!-- enlace al índice correspondiente -->
+                <a href="Arqui/index.html"> <!-- enlace al índice correspondiente -->
                     <img src="Imagenes/Arqui1.jpg" alt="Máquinas Virtuales">
                     <div class="overlay">
                         <h3> Arquitectura de software </h3>
